--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
-baseURL: https://example.org/
+baseURL: https://rekon.io/
 languageCode: en-us
-title: Rekon Software & Security
+title: Rekon Security & Software
